# aws-connect-idle-agent

./: .gitignore  README.md  idle_agent.py  instance_idle.proto  instance_idle_pb2.py  pyproject.toml
