[tool.poetry]
name = "aws-connect-idle-agent"
version = "0.1.0"
description = ""
authors = ["Szymon Bańczyk <sbanczyk02@interia.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.94"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
